--- a/src/styles/driver.module.scss
+++ b/src/styles/driver.module.scss
@@ -110,3 +110,48 @@
     transform: scale(1.03);
   }
 }
+
+//mobile styles
+@media (max-width: 640px) {
+  .formctn {
+    width: 90vw;   
+    padding: 1.5rem 2rem;
+  }
+
+  .title {
+    font-size: 2rem;  
+  }
+
+  .titlekr {
+    font-size: 1.8rem;
+  }
+
+  .formbtn {
+    padding: 0.5rem 3rem;
+    font-size: 0.875rem;
+  }
+
+  .consentctn {
+    padding: 1rem;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1024px) {
+  .formctn {
+    width: 70vw;      // wider but not full width on tablets
+    padding: 2rem 4rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+  }
+
+  .titlekr {
+    font-size: 2.2rem;
+  }
+
+  .formbtn {
+    padding: 0.5rem 4rem;
+    font-size: 0.95rem;
+  }
+}
