--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -47,3 +47,47 @@
     font-weight: bolder;
   }
 }
+
+//mobile styles
+@media (max-width: 640px) {
+  .ctn {
+    grid-template-columns: 1fr;
+    padding: 0.5rem;
+    gap: 0.5rem;
+  }
+
+  .logo {
+    justify-content: center;
+    font-size: 2rem;
+  }
+
+  .nav {
+    justify-content: center;
+    gap: 0.5rem;
+  }
+
+  .tabButton {
+    padding: 0.4rem 0.8rem;
+    font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1024px) {
+   .ctn {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0.5rem 1rem;
+  }
+
+  .logo {
+    font-size: 2.5rem;
+  }
+
+  .nav {
+    gap: 0.75rem;
+  }
+
+  .tabButton {
+    padding: 0.45rem 0.9rem;
+    font-size: 0.85rem;
+  }
+}
