--- a/src/styles/reservation.module.scss
+++ b/src/styles/reservation.module.scss
@@ -36,9 +36,17 @@
   gap: 2rem;
 }
 
+.card{
+  display: grid;
+  grid-template-columns: 4rem 1fr;
+  gap: 0.5rem;
+  font-family: $english-font;
+}
+
 .label{
   margin-bottom: 0.5rem !important;
   font-weight: 500;
+  padding-top: 0.7rem;
 }
 
 .radioctn{
