--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
+$primary: #0D3C2D;
 $light: #F1F1F1;
 $dark: #333333;
-$background: #fff7eb;
 
-$english-font: 'Afacad', sans-serif;
-$kr-font: 'Advent Pro', 'sans-serif'
+
+$english-font: 'Outfit', sans-serif;
+$kr-font: 'Advent Pro', 'sans-serif';
+$backup-font: 'Afacad', sans-serif;
 
 
