--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Afacad&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Afacad&family=Outfit&display=swap');
 
 html, body {
   font-family: 'Advent Pro', sans-serif;
