--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -18,7 +18,9 @@
   display: flex;
   justify-content: flex-start;
   font-family: $english-font;
-  font-size: 3rem;
+  font-size: 2.7rem;
+  font-weight: bolder;
+  color: $primary;
 }
 
 .nav {
@@ -34,7 +36,7 @@
 
 .tabButton {
   padding: 0.5rem 1rem;
-  font-size: 0.9rem;
+  font-size: 1rem;
   border-bottom: 2px solid transparent;
 
   &:hover {
