--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -115,14 +115,15 @@
 
 .introButton{
   margin: 3rem 0;
-  padding: 0.5rem 4rem;
-  font-size: 1rem;
+  padding: 0.8rem 4rem;
+  font-size: 1.5rem;
   background-color: white;
   color: $primary;
   border-radius: 3rem;
   border: none;
   cursor: pointer;
   font-weight: bolder;
+  font-family: $english-font;
 
   &:hover {
     transform: scale(1.03);
