--- a/src/styles/driver.module.scss
+++ b/src/styles/driver.module.scss
@@ -22,12 +22,7 @@
 .title{
   font-family: $english-font;
   font-size: 3rem;
-}
-
-.titlekr{
-  font-family: $kr-font;
-  text-align: center;
-  font-size: 2.5rem;
+  font-weight: bolder;
 }
 
 .subtext2{
