--- a/src/styles/customer.module.scss
+++ b/src/styles/customer.module.scss
@@ -30,6 +30,11 @@
   padding: 1rem 2rem 2rem;
 }
 
+.ftsubtext{
+  font-size: 1.3rem;
+  padding: 1rem 2rem 5rem;
+}
+
 .btnctn {
   position: fixed;
   bottom: 5rem;
@@ -101,6 +106,44 @@
   background-color: $light;
 }
 
+.rsvMethods {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+}
+
+.rsvCard {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+.rsvContent {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  align-items: center;
+}
+
+.rsvButton{
+  padding: 0.7rem;
+  width: 100%;
+  font-size: 1.2rem;
+  background-color: $primary;
+  color: white;
+  font-weight: bolder;
+  font-family: $english-font;
+  border-radius: 3rem;
+  border: none;
+  cursor: pointer;
+  
+  &:hover {
+    // transition: all 0.3s ease-in-out;
+    transform: scale(1.03);
+  }
+}
+
 .faqsection{
   background-color: #FAFAFA;
   padding: 5rem 2rem 7rem;
@@ -157,6 +200,54 @@
   }
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.modalWrapper {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modalContent {
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: fit-content;
+}
+
+.closeButton {
+  position: absolute;
+  right: 0;
+  top: 3rem;
+  color: white;
+  font-weight: bolder;
+  font-size: 1.5rem;
+
+  &:hover {
+    // transition: all 0.3s ease-in-out;
+    transform: scale(1.05);
+  }
+}
+
+.phonePop{
+  background-color: white;
+  border-radius: 2rem;
+  padding: 2rem 4rem;
+  font-family: $english-font;
+}
 //mobile styles
 @media (max-width: 640px) {
   .heroSection {
@@ -167,6 +258,7 @@
   .btn {
     padding: 0.5rem 3rem;
     font-size: 0.875rem;
+    width: 60vw;
   }
 
   .tsttitle{
@@ -199,12 +291,39 @@
     padding: 3rem 1.5rem;
   }
 
+  .rsvMethods {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 4rem;
+  }
+  
+  .rsvCard {
+    gap: 1rem;
+  }
+
+  .rsvContent {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: center;
+  }
+
   .faqsection{
     padding: 3rem 0rem 3rem;
   }
   
   .faqctn {
     padding: 1rem 2rem 1rem;
+  }
+  
+  .closeButton {
+    position: absolute;
+    left: 2.5rem;
+    right: revert;
+    top: 1.5rem;
+    color: white;
+    font-weight: bolder;
+    font-size: 1.5rem;
   }
 }
 
@@ -217,6 +336,7 @@
   .btn {
     padding: 0.5rem 4rem;
     font-size: 1rem;
+    width: fit-content
   }
 
   .featuresection{
@@ -233,7 +353,33 @@
   }
 
   .signupSection {
-    padding: 4rem 3rem;
+    padding: 4rem 2rem;
+  }
+
+  .rsvMethods {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+  }
+
+  .rsvContent {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+  }
+
+  .rsvButton{
+    font-size: 1rem;
+  }
+
+  .closeButton {
+    position: absolute;
+    right: 0;
+    top: 3rem;
+    color: white;
+    font-weight: bolder;
+    font-size: 1.5rem;
   }
 
   .faqsection{
