--- a/src/styles/driver.module.scss
+++ b/src/styles/driver.module.scss
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  font-family: $english-font;
 }
 
 .label{
@@ -111,7 +112,7 @@
   .ctn{
     padding: 4rem 2rem;
   }
-  
+
   .formctn {
     width: 90vw;   
     padding: 1.5rem 2rem;
