add wanted driver types

--- a/src/styles/driver.module.scss
+++ b/src/styles/driver.module.scss
@@ -34,6 +34,58 @@
   font-weight: normal;
 }
 
+.driversctn{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  width: 100vw;
+  padding: 4rem;
+  margin: 2rem 0;
+}
+
+.driversheader{
+  color: $primary;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.cardsctn{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+
+.card{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.icon{
+  width: 5rem;
+  height: 5rem;
+}
+
+.driver{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: left;
+}
+
+.name{
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.age{
+  font-size: 1rem;
+  font-weight: normal;
+  color: #525252
+}
+
 .formctn{
   margin-top: 2rem;
   width: 50vw;
@@ -113,6 +165,21 @@
     padding: 4rem 2rem;
   }
 
+  .driversctn{
+    padding: 4rem 2rem;
+    margin: 2rem 0;
+  }
+
+  .cardsctn{
+    grid-template-columns: 1fr;
+  }
+
+  .card{
+    display:flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
   .formctn {
     width: 90vw;   
     padding: 1.5rem 2rem;
@@ -133,6 +200,22 @@
 }
 
 @media (min-width: 640px) and (max-width: 1024px) {
+  .driversctn{
+    padding: 4rem 1rem;
+    margin: 2rem 0;
+  }
+
+  .cardsctn{
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .card{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
   .formctn {
     width: 70vw;   
     padding: 2rem 4rem;
