--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $dark: #333333;
 
 
 $english-font: 'Outfit', sans-serif;
-$kr-font: 'Advent Pro', 'sans-serif';
+$kr-font: 'Alata', 'sans-serif';
 $backup-font: 'Afacad', sans-serif;
 
 
